tests/baselines/reference/assignmentCompat1.errors.txt
tests/cases/compiler/assignmentCompat1.ts(4,1): error TS2322: Type '{ [index: 文字]: 任意; }' is not assignable to type '{ one: 数字; }'.
  Property 'one' is missing in type '{ [index: 文字]: 任意; }'.
tests/cases/compiler/assignmentCompat1.ts(6,1): error TS2322: Type '{ [index: 数字]: 任意; }' is not assignable to type '{ one: 数字; }'.
  Property 'one' is missing in type '{ [index: 数字]: 任意; }'.
tests/cases/compiler/assignmentCompat1.ts(8,1): error TS2322: Type '"foo"' is not assignable to type '{ [index: 文字]: 任意; }'.
tests/cases/compiler/assignmentCompat1.ts(10,1): error TS2322: Type '为假' is not assignable to type '{ [index: 数字]: 任意; }'.


==== tests/cases/compiler/assignmentCompat1.ts (4 errors) ====
    var x = { one: 1 };
    var y: { [index: string]: any };
    var z: { [index: number]: any };
    x = y;  // Error
    ~
!!! error TS2322: Type '{ [index: 文字]: 任意; }' is not assignable to type '{ one: 数字; }'.
!!! error TS2322:   Property 'one' is missing in type '{ [index: 文字]: 任意; }'.
    y = x;  // Ok because index signature type is any
    x = z;  // Error
    ~
!!! error TS2322: Type '{ [index: 数字]: 任意; }' is not assignable to type '{ one: 数字; }'.
!!! error TS2322:   Property 'one' is missing in type '{ [index: 数字]: 任意; }'.
    z = x;  // Ok because index signature type is any
    y = "foo"; // Error
    ~
!!! error TS2322: Type '"foo"' is not assignable to type '{ [index: 文字]: 任意; }'.
    z = "foo"; // OK, string has numeric indexer
    z = false; // Error
    ~
!!! error TS2322: Type '为假' is not assignable to type '{ [index: 数字]: 任意; }'.
    
    